--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "dependencies": {
     "jquery": "1.11.3",
-    "normalize-css": "normalize.css#~3.0.3"
+    "normalize-css": "normalize.css#~3.0.3",
+    "bPopup": "bpopup#~0.11.0"
   }
 }
